Trying a fix for overflow on long words or URLS.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ body {
   margin: auto;
   line-height: 1.75;
   font-size: 1.25em;
+
+	/* https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container */
+	overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 a {
